# Tabashir-project

./: .env.example  .gitignore  README.md  _profile_1477.json  _profile_1586.json  auto_apply_gui.py  job_applier.py  pyproject.toml  tabashir_auto_apply.py  user_profile.example.json
scripts/: apply_one.py
src/autoapply/: __init__.py  config.py
src/autoapply/agent/: artifacts.py  runner.py  storage.py  task_builder.py
src/autoapply/domain/: profile.py
src/autoapply/llm/: anthropic_provider.py  deepseek_provider.py  openai_provider.py  provider.py
tools/: job_feed_fetcher.py
