[project]
name = "autoapply"
version = "0.2.0"
description = "LLM-driven job application automation (Auto-Apply v2)"
requires-python = ">=3.11,<3.13"
readme = "README.md"

# Phase 1 dependencies only. Phases 3/4 add sqlalchemy/alembic/fastapi/rq.
dependencies = [
    "browser-use>=0.1.40",
    "anthropic>=0.39.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",   # OpenAI + DeepSeek (OpenAI-compatible)
    "playwright>=1.49.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "paramiko>=5.0.0",
    "psycopg2-binary>=2.9.12",
    "customtkinter>=5.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
apply-one = "scripts.apply_one:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoapply"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
